docs/v0.9.0/_sources/gallery/scattering/spherical.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scattering/spherical.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_scattering_spherical.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scattering_spherical.py:


Circular Scatterer
==================

This example demonstrates the setup and execution of a circular scatterer experiment using LightWave2D.
We will define the simulation grid, add a circular scatterer and a line source, apply a perfectly matched layer (PML), run the simulation, and visualize the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-48

.. code-block:: Python

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment
    from MPSPlots import colormaps
    from TypedUnit import ureg

    grid = Grid(
        resolution=0.03 * ureg.micrometer,
        size_x=32 * ureg.micrometer,
        size_y=20 * ureg.micrometer,
        n_steps=200,
    )

    experiment = Experiment(grid=grid)

    scatterer = experiment.add_circle(
        position=("30%", "50%"),  # Center position of the scatterer
        epsilon_r=1.5,  # Relative permittivity of the scatterer
        radius=3 * ureg.micrometer,
        sigma=0 * (ureg.siemens / ureg.meter),  # Conductivity of the scatterer
    )

    source = experiment.add_line_source(
        wavelength=1550 * ureg.nanometer,
        position_0=("10%", "80%"),  # Starting position of the source
        position_1=("10%", "20%"),  # Ending position of the source
        amplitude=10,  # Amplitude of the source
    )

    experiment.add_pml(
        order=1,  # Order of the PML polynomial profile
        width="10%",  # Width of the PML region as a percentage of grid size
        sigma_max=5000 * (ureg.siemens / ureg.meter),  # Maximum conductivity for the PML
    )

    experiment.plot()

    experiment.run()




.. image-sg:: /gallery/scattering/images/sphx_glr_spherical_001.png
   :alt: Fiber structure
   :srcset: /gallery/scattering/images/sphx_glr_spherical_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    SimulationResult(Ez_t=array([[[0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            ...,
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.]],

           [[0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            ...,
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.]],

           [[0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            ...,
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.]],

           ...,

           [[0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            ...,
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.]],

           [[0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            ...,
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.]],

           [[0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            ...,
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.],
            [0., 0., 0., ..., 0., 0., 0.]]], shape=(200, 1066, 666)), recorded_time_stamp=<Quantity([0.00000000e+00 7.08171678e-17 1.41634336e-16 2.12451503e-16
     2.83268671e-16 3.54085839e-16 4.24903007e-16 4.95720175e-16
     5.66537342e-16 6.37354510e-16 7.08171678e-16 7.78988846e-16
     8.49806014e-16 9.20623181e-16 9.91440349e-16 1.06225752e-15
     1.13307468e-15 1.20389185e-15 1.27470902e-15 1.34552619e-15
     1.41634336e-15 1.48716052e-15 1.55797769e-15 1.62879486e-15
     1.69961203e-15 1.77042920e-15 1.84124636e-15 1.91206353e-15
     1.98288070e-15 2.05369787e-15 2.12451503e-15 2.19533220e-15
     2.26614937e-15 2.33696654e-15 2.40778371e-15 2.47860087e-15
     2.54941804e-15 2.62023521e-15 2.69105238e-15 2.76186954e-15
     2.83268671e-15 2.90350388e-15 2.97432105e-15 3.04513822e-15
     3.11595538e-15 3.18677255e-15 3.25758972e-15 3.32840689e-15
     3.39922405e-15 3.47004122e-15 3.54085839e-15 3.61167556e-15
     3.68249273e-15 3.75330989e-15 3.82412706e-15 3.89494423e-15
     3.96576140e-15 4.03657856e-15 4.10739573e-15 4.17821290e-15
     4.24903007e-15 4.31984724e-15 4.39066440e-15 4.46148157e-15
     4.53229874e-15 4.60311591e-15 4.67393308e-15 4.74475024e-15
     4.81556741e-15 4.88638458e-15 4.95720175e-15 5.02801891e-15
     5.09883608e-15 5.16965325e-15 5.24047042e-15 5.31128759e-15
     5.38210475e-15 5.45292192e-15 5.52373909e-15 5.59455626e-15
     5.66537342e-15 5.73619059e-15 5.80700776e-15 5.87782493e-15
     5.94864210e-15 6.01945926e-15 6.09027643e-15 6.16109360e-15
     6.23191077e-15 6.30272793e-15 6.37354510e-15 6.44436227e-15
     6.51517944e-15 6.58599661e-15 6.65681377e-15 6.72763094e-15
     6.79844811e-15 6.86926528e-15 6.94008244e-15 7.01089961e-15
     7.08171678e-15 7.15253395e-15 7.22335112e-15 7.29416828e-15
     7.36498545e-15 7.43580262e-15 7.50661979e-15 7.57743696e-15
     7.64825412e-15 7.71907129e-15 7.78988846e-15 7.86070563e-15
     7.93152279e-15 8.00233996e-15 8.07315713e-15 8.14397430e-15
     8.21479147e-15 8.28560863e-15 8.35642580e-15 8.42724297e-15
     8.49806014e-15 8.56887730e-15 8.63969447e-15 8.71051164e-15
     8.78132881e-15 8.85214598e-15 8.92296314e-15 8.99378031e-15
     9.06459748e-15 9.13541465e-15 9.20623181e-15 9.27704898e-15
     9.34786615e-15 9.41868332e-15 9.48950049e-15 9.56031765e-15
     9.63113482e-15 9.70195199e-15 9.77276916e-15 9.84358632e-15
     9.91440349e-15 9.98522066e-15 1.00560378e-14 1.01268550e-14
     1.01976722e-14 1.02684893e-14 1.03393065e-14 1.04101237e-14
     1.04809408e-14 1.05517580e-14 1.06225752e-14 1.06933923e-14
     1.07642095e-14 1.08350267e-14 1.09058438e-14 1.09766610e-14
     1.10474782e-14 1.11182953e-14 1.11891125e-14 1.12599297e-14
     1.13307468e-14 1.14015640e-14 1.14723812e-14 1.15431984e-14
     1.16140155e-14 1.16848327e-14 1.17556499e-14 1.18264670e-14
     1.18972842e-14 1.19681014e-14 1.20389185e-14 1.21097357e-14
     1.21805529e-14 1.22513700e-14 1.23221872e-14 1.23930044e-14
     1.24638215e-14 1.25346387e-14 1.26054559e-14 1.26762730e-14
     1.27470902e-14 1.28179074e-14 1.28887245e-14 1.29595417e-14
     1.30303589e-14 1.31011760e-14 1.31719932e-14 1.32428104e-14
     1.33136275e-14 1.33844447e-14 1.34552619e-14 1.35260791e-14
     1.35968962e-14 1.36677134e-14 1.37385306e-14 1.38093477e-14
     1.38801649e-14 1.39509821e-14 1.40217992e-14 1.40926164e-14], 'second')>, detector_data=array([], shape=(200, 0), dtype=float64), grid=namespace(x_stamp=<Quantity([0.00000000e+00 3.00187617e-02 6.00375235e-02 ... 3.19099437e+01
     3.19399625e+01 3.19699812e+01], 'micrometer')>, y_stamp=<Quantity([ 0.          0.03003003  0.06006006  0.09009009  0.12012012  0.15015015
      0.18018018  0.21021021  0.24024024  0.27027027  0.3003003   0.33033033
      0.36036036  0.39039039  0.42042042  0.45045045  0.48048048  0.51051051
      0.54054054  0.57057057  0.6006006   0.63063063  0.66066066  0.69069069
      0.72072072  0.75075075  0.78078078  0.81081081  0.84084084  0.87087087
      0.9009009   0.93093093  0.96096096  0.99099099  1.02102102  1.05105105
      1.08108108  1.11111111  1.14114114  1.17117117  1.2012012   1.23123123
      1.26126126  1.29129129  1.32132132  1.35135135  1.38138138  1.41141141
      1.44144144  1.47147147  1.5015015   1.53153153  1.56156156  1.59159159
      1.62162162  1.65165165  1.68168168  1.71171171  1.74174174  1.77177177
      1.8018018   1.83183183  1.86186186  1.89189189  1.92192192  1.95195195
      1.98198198  2.01201201  2.04204204  2.07207207  2.1021021   2.13213213
      2.16216216  2.19219219  2.22222222  2.25225225  2.28228228  2.31231231
      2.34234234  2.37237237  2.4024024   2.43243243  2.46246246  2.49249249
      2.52252252  2.55255255  2.58258258  2.61261261  2.64264264  2.67267267
      2.7027027   2.73273273  2.76276276  2.79279279  2.82282282  2.85285285
      2.88288288  2.91291291  2.94294294  2.97297297  3.003003    3.03303303
      3.06306306  3.09309309  3.12312312  3.15315315  3.18318318  3.21321321
      3.24324324  3.27327327  3.3033033   3.33333333  3.36336336  3.39339339
      3.42342342  3.45345345  3.48348348  3.51351351  3.54354354  3.57357357
      3.6036036   3.63363363  3.66366366  3.69369369  3.72372372  3.75375375
      3.78378378  3.81381381  3.84384384  3.87387387  3.9039039   3.93393393
      3.96396396  3.99399399  4.02402402  4.05405405  4.08408408  4.11411411
      4.14414414  4.17417417  4.2042042   4.23423423  4.26426426  4.29429429
      4.32432432  4.35435435  4.38438438  4.41441441  4.44444444  4.47447447
      4.5045045   4.53453453  4.56456456  4.59459459  4.62462462  4.65465465
      4.68468468  4.71471471  4.74474474  4.77477477  4.8048048   4.83483483
      4.86486486  4.89489489  4.92492492  4.95495495  4.98498498  5.01501502
      5.04504505  5.07507508  5.10510511  5.13513514  5.16516517  5.1951952
      5.22522523  5.25525526  5.28528529  5.31531532  5.34534535  5.37537538
      5.40540541  5.43543544  5.46546547  5.4954955   5.52552553  5.55555556
      5.58558559  5.61561562  5.64564565  5.67567568  5.70570571  5.73573574
      5.76576577  5.7957958   5.82582583  5.85585586  5.88588589  5.91591592
      5.94594595  5.97597598  6.00600601  6.03603604  6.06606607  6.0960961
      6.12612613  6.15615616  6.18618619  6.21621622  6.24624625  6.27627628
      6.30630631  6.33633634  6.36636637  6.3963964   6.42642643  6.45645646
      6.48648649  6.51651652  6.54654655  6.57657658  6.60660661  6.63663664
      6.66666667  6.6966967   6.72672673  6.75675676  6.78678679  6.81681682
      6.84684685  6.87687688  6.90690691  6.93693694  6.96696697  6.996997
      7.02702703  7.05705706  7.08708709  7.11711712  7.14714715  7.17717718
      7.20720721  7.23723724  7.26726727  7.2972973   7.32732733  7.35735736
      7.38738739  7.41741742  7.44744745  7.47747748  7.50750751  7.53753754
      7.56756757  7.5975976   7.62762763  7.65765766  7.68768769  7.71771772
      7.74774775  7.77777778  7.80780781  7.83783784  7.86786787  7.8978979
      7.92792793  7.95795796  7.98798799  8.01801802  8.04804805  8.07807808
      8.10810811  8.13813814  8.16816817  8.1981982   8.22822823  8.25825826
      8.28828829  8.31831832  8.34834835  8.37837838  8.40840841  8.43843844
      8.46846847  8.4984985   8.52852853  8.55855856  8.58858859  8.61861862
      8.64864865  8.67867868  8.70870871  8.73873874  8.76876877  8.7987988
      8.82882883  8.85885886  8.88888889  8.91891892  8.94894895  8.97897898
      9.00900901  9.03903904  9.06906907  9.0990991   9.12912913  9.15915916
      9.18918919  9.21921922  9.24924925  9.27927928  9.30930931  9.33933934
      9.36936937  9.3993994   9.42942943  9.45945946  9.48948949  9.51951952
      9.54954955  9.57957958  9.60960961  9.63963964  9.66966967  9.6996997
      9.72972973  9.75975976  9.78978979  9.81981982  9.84984985  9.87987988
      9.90990991  9.93993994  9.96996997 10.         10.03003003 10.06006006
     10.09009009 10.12012012 10.15015015 10.18018018 10.21021021 10.24024024
     10.27027027 10.3003003  10.33033033 10.36036036 10.39039039 10.42042042
     10.45045045 10.48048048 10.51051051 10.54054054 10.57057057 10.6006006
     10.63063063 10.66066066 10.69069069 10.72072072 10.75075075 10.78078078
     10.81081081 10.84084084 10.87087087 10.9009009  10.93093093 10.96096096
     10.99099099 11.02102102 11.05105105 11.08108108 11.11111111 11.14114114
     11.17117117 11.2012012  11.23123123 11.26126126 11.29129129 11.32132132
     11.35135135 11.38138138 11.41141141 11.44144144 11.47147147 11.5015015
     11.53153153 11.56156156 11.59159159 11.62162162 11.65165165 11.68168168
     11.71171171 11.74174174 11.77177177 11.8018018  11.83183183 11.86186186
     11.89189189 11.92192192 11.95195195 11.98198198 12.01201201 12.04204204
     12.07207207 12.1021021  12.13213213 12.16216216 12.19219219 12.22222222
     12.25225225 12.28228228 12.31231231 12.34234234 12.37237237 12.4024024
     12.43243243 12.46246246 12.49249249 12.52252252 12.55255255 12.58258258
     12.61261261 12.64264264 12.67267267 12.7027027  12.73273273 12.76276276
     12.79279279 12.82282282 12.85285285 12.88288288 12.91291291 12.94294294
     12.97297297 13.003003   13.03303303 13.06306306 13.09309309 13.12312312
     13.15315315 13.18318318 13.21321321 13.24324324 13.27327327 13.3033033
     13.33333333 13.36336336 13.39339339 13.42342342 13.45345345 13.48348348
     13.51351351 13.54354354 13.57357357 13.6036036  13.63363363 13.66366366
     13.69369369 13.72372372 13.75375375 13.78378378 13.81381381 13.84384384
     13.87387387 13.9039039  13.93393393 13.96396396 13.99399399 14.02402402
     14.05405405 14.08408408 14.11411411 14.14414414 14.17417417 14.2042042
     14.23423423 14.26426426 14.29429429 14.32432432 14.35435435 14.38438438
     14.41441441 14.44444444 14.47447447 14.5045045  14.53453453 14.56456456
     14.59459459 14.62462462 14.65465465 14.68468468 14.71471471 14.74474474
     14.77477477 14.8048048  14.83483483 14.86486486 14.89489489 14.92492492
     14.95495495 14.98498498 15.01501502 15.04504505 15.07507508 15.10510511
     15.13513514 15.16516517 15.1951952  15.22522523 15.25525526 15.28528529
     15.31531532 15.34534535 15.37537538 15.40540541 15.43543544 15.46546547
     15.4954955  15.52552553 15.55555556 15.58558559 15.61561562 15.64564565
     15.67567568 15.70570571 15.73573574 15.76576577 15.7957958  15.82582583
     15.85585586 15.88588589 15.91591592 15.94594595 15.97597598 16.00600601
     16.03603604 16.06606607 16.0960961  16.12612613 16.15615616 16.18618619
     16.21621622 16.24624625 16.27627628 16.30630631 16.33633634 16.36636637
     16.3963964  16.42642643 16.45645646 16.48648649 16.51651652 16.54654655
     16.57657658 16.60660661 16.63663664 16.66666667 16.6966967  16.72672673
     16.75675676 16.78678679 16.81681682 16.84684685 16.87687688 16.90690691
     16.93693694 16.96696697 16.996997   17.02702703 17.05705706 17.08708709
     17.11711712 17.14714715 17.17717718 17.20720721 17.23723724 17.26726727
     17.2972973  17.32732733 17.35735736 17.38738739 17.41741742 17.44744745
     17.47747748 17.50750751 17.53753754 17.56756757 17.5975976  17.62762763
     17.65765766 17.68768769 17.71771772 17.74774775 17.77777778 17.80780781
     17.83783784 17.86786787 17.8978979  17.92792793 17.95795796 17.98798799
     18.01801802 18.04804805 18.07807808 18.10810811 18.13813814 18.16816817
     18.1981982  18.22822823 18.25825826 18.28828829 18.31831832 18.34834835
     18.37837838 18.40840841 18.43843844 18.46846847 18.4984985  18.52852853
     18.55855856 18.58858859 18.61861862 18.64864865 18.67867868 18.70870871
     18.73873874 18.76876877 18.7987988  18.82882883 18.85885886 18.88888889
     18.91891892 18.94894895 18.97897898 19.00900901 19.03903904 19.06906907
     19.0990991  19.12912913 19.15915916 19.18918919 19.21921922 19.24924925
     19.27927928 19.30930931 19.33933934 19.36936937 19.3993994  19.42942943
     19.45945946 19.48948949 19.51951952 19.54954955 19.57957958 19.60960961
     19.63963964 19.66966967 19.6996997  19.72972973 19.75975976 19.78978979
     19.81981982 19.84984985 19.87987988 19.90990991 19.93993994 19.96996997], 'micrometer')>), components=(<LightWave2D.components.Circle object at 0x7f8eb2fc8870>,), sources=(<LightWave2D.source.LineWaveSource object at 0x7f8eb0f018f0>,), detectors=(), detector_time_stamp=<Quantity([0.00000000e+00 7.08171678e-17 1.41634336e-16 2.12451503e-16
     2.83268671e-16 3.54085839e-16 4.24903007e-16 4.95720175e-16
     5.66537342e-16 6.37354510e-16 7.08171678e-16 7.78988846e-16
     8.49806014e-16 9.20623181e-16 9.91440349e-16 1.06225752e-15
     1.13307468e-15 1.20389185e-15 1.27470902e-15 1.34552619e-15
     1.41634336e-15 1.48716052e-15 1.55797769e-15 1.62879486e-15
     1.69961203e-15 1.77042920e-15 1.84124636e-15 1.91206353e-15
     1.98288070e-15 2.05369787e-15 2.12451503e-15 2.19533220e-15
     2.26614937e-15 2.33696654e-15 2.40778371e-15 2.47860087e-15
     2.54941804e-15 2.62023521e-15 2.69105238e-15 2.76186954e-15
     2.83268671e-15 2.90350388e-15 2.97432105e-15 3.04513822e-15
     3.11595538e-15 3.18677255e-15 3.25758972e-15 3.32840689e-15
     3.39922405e-15 3.47004122e-15 3.54085839e-15 3.61167556e-15
     3.68249273e-15 3.75330989e-15 3.82412706e-15 3.89494423e-15
     3.96576140e-15 4.03657856e-15 4.10739573e-15 4.17821290e-15
     4.24903007e-15 4.31984724e-15 4.39066440e-15 4.46148157e-15
     4.53229874e-15 4.60311591e-15 4.67393308e-15 4.74475024e-15
     4.81556741e-15 4.88638458e-15 4.95720175e-15 5.02801891e-15
     5.09883608e-15 5.16965325e-15 5.24047042e-15 5.31128759e-15
     5.38210475e-15 5.45292192e-15 5.52373909e-15 5.59455626e-15
     5.66537342e-15 5.73619059e-15 5.80700776e-15 5.87782493e-15
     5.94864210e-15 6.01945926e-15 6.09027643e-15 6.16109360e-15
     6.23191077e-15 6.30272793e-15 6.37354510e-15 6.44436227e-15
     6.51517944e-15 6.58599661e-15 6.65681377e-15 6.72763094e-15
     6.79844811e-15 6.86926528e-15 6.94008244e-15 7.01089961e-15
     7.08171678e-15 7.15253395e-15 7.22335112e-15 7.29416828e-15
     7.36498545e-15 7.43580262e-15 7.50661979e-15 7.57743696e-15
     7.64825412e-15 7.71907129e-15 7.78988846e-15 7.86070563e-15
     7.93152279e-15 8.00233996e-15 8.07315713e-15 8.14397430e-15
     8.21479147e-15 8.28560863e-15 8.35642580e-15 8.42724297e-15
     8.49806014e-15 8.56887730e-15 8.63969447e-15 8.71051164e-15
     8.78132881e-15 8.85214598e-15 8.92296314e-15 8.99378031e-15
     9.06459748e-15 9.13541465e-15 9.20623181e-15 9.27704898e-15
     9.34786615e-15 9.41868332e-15 9.48950049e-15 9.56031765e-15
     9.63113482e-15 9.70195199e-15 9.77276916e-15 9.84358632e-15
     9.91440349e-15 9.98522066e-15 1.00560378e-14 1.01268550e-14
     1.01976722e-14 1.02684893e-14 1.03393065e-14 1.04101237e-14
     1.04809408e-14 1.05517580e-14 1.06225752e-14 1.06933923e-14
     1.07642095e-14 1.08350267e-14 1.09058438e-14 1.09766610e-14
     1.10474782e-14 1.11182953e-14 1.11891125e-14 1.12599297e-14
     1.13307468e-14 1.14015640e-14 1.14723812e-14 1.15431984e-14
     1.16140155e-14 1.16848327e-14 1.17556499e-14 1.18264670e-14
     1.18972842e-14 1.19681014e-14 1.20389185e-14 1.21097357e-14
     1.21805529e-14 1.22513700e-14 1.23221872e-14 1.23930044e-14
     1.24638215e-14 1.25346387e-14 1.26054559e-14 1.26762730e-14
     1.27470902e-14 1.28179074e-14 1.28887245e-14 1.29595417e-14
     1.30303589e-14 1.31011760e-14 1.31719932e-14 1.32428104e-14
     1.33136275e-14 1.33844447e-14 1.34552619e-14 1.35260791e-14
     1.35968962e-14 1.36677134e-14 1.37385306e-14 1.38093477e-14
     1.38801649e-14 1.39509821e-14 1.40217992e-14 1.40926164e-14], 'second')>, flux=(), field_path=None)



.. GENERATED FROM PYTHON SOURCE LINES 49-50

Render an animation of the field propagation over time

.. GENERATED FROM PYTHON SOURCE LINES 50-57

.. code-block:: Python

    animation = experiment.render_propagation(
        skip_frame=5,  # Number of frames to skip in the animation
        colormap=colormaps.polytechnique.red_black_blue,  # Colormap for the animation
        enhance_contrast=3,  # Enhance contrast for better visualization
        save_as="./circular_scatterer.gif",  # Save the animation as a GIF file
        fps=30,
    )



.. image-sg:: /gallery/scattering/images/sphx_glr_spherical_002.png
   :alt: spherical
   :srcset: /gallery/scattering/images/sphx_glr_spherical_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (2 minutes 16.525 seconds)


.. _sphx_glr_download_gallery_scattering_spherical.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: spherical.ipynb <spherical.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: spherical.py <spherical.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: spherical.zip <spherical.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
